crates/vox-compiler/tests/snapshots/reactive_smoke_test__box_tsx_css_import.snap
---
source: crates/vox-compiler/tests/reactive_smoke_test.rs
expression: tsx
---
import React from "react";

import "./Box.css";

export function Box(): React.ReactElement {
  return (
    <div className="px-4">
    <div className={["flex", "flex-col", "x"].filter(Boolean).join(" ")}>
      {"a"}
    </div>
    </div>
  );
}
