crates/vox-compiler/tests/snapshots/reactive_smoke_test__counter_tsx_function_and_usememo_op_s205.snap
---
source: crates/vox-compiler/tests/reactive_smoke_test.rs
expression: ts
---
import React, { useState, useEffect, useMemo } from "react";

export interface CounterProps {
  initial: number;
}

export function Counter({ initial }: CounterProps): React.ReactElement {
  const [count, set_count] = useState(initial);
  const double = useMemo(() => count * 2, [count]);
  useEffect(() => {
    log("mounted");
  }, []);
  return (
    <div className="px-4">
    <div className={["flex", "flex-col", "p-4"].filter(Boolean).join(" ")}>
      <h1 className={["text-3xl", "font-semibold"].filter(Boolean).join(" ")}>
        {"Count: " + count}
      </h1>
      <p className={"text-base"}>
        {"Double: " + double}
      </p>
      <button className={["inline-flex", "items-center", "justify-center", "rounded-md", "text-sm", "font-medium", "ring-offset-background", "transition-colors", "focus-visible:outline-none", "focus-visible:ring-2", "focus-visible:ring-ring", "focus-visible:ring-offset-2", "disabled:pointer-events-none", "disabled:opacity-50", "bg-primary", "text-primary-foreground", "hover:bg-primary/90", "h-10", "px-4", "py-2"].filter(Boolean).join(" ")} onClick={() => {
        set_count(count + 1);
    }}>
        {"Increment"}
      </button>
    </div>
    </div>
  );
}
