crates/vox-compiler/tests/snapshots/reactive_smoke_test__v_tsx_usestate_k_op_s074.snap
---
source: crates/vox-compiler/tests/reactive_smoke_test.rs
expression: f
---
import React, { useState } from "react";

export function V(): React.ReactElement {
  const [k, set_k] = useState(2);
  return (
    <div className="px-4">
    <p className={"text-base"}>
      {k}
    </p>
    </div>
  );
}
